# openpilot-nnlc-tools

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  prepare_training_data.sh  pyproject.toml  requirements.txt  setup.py  setup.sh  steering-classifier-spec.md
docker/: Dockerfile  docker-compose.yml
nnlc_tools/: analyze_interventions.py  data_io.py  extract_lateral_data.py  logreader.py  prune_routes.py  score_routes.py  sync_rlogs.py  visualize_coverage.py  visualize_model.py
nnlc_tools/steering_classifier/: README.md  __init__.py  cascade.py  config.py  evaluate.py  features.py  filters.py  train_rf.py  types.py  visualize.py
nnlc_tools/steering_classifier/tests/: synthetic.py  test_cascade.py  test_features.py  test_filters.py  test_synthetic.py
scripts/: offload_data.sh  prepare_training_data.sh  setup.sh  sync_device.command
tests/: create_fixture.py  test_cli.py  test_imports.py  test_training.py
tests/fixtures/: test_data.csv
training/: README.md  install_packages.jl  latmodel.jl  latmodel_temporal.jl  run.sh
