[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nnlc-tools"
version = "0.1.0"
description = "NNLC (Neural Network Lateral Control) training tools for openpilot"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
    "matplotlib>=3.7,<4.0",
    "tqdm>=4.65",
    "zstandard>=0.21",
    "paramiko>=3.0",
    "pycapnp>=2.0",
]

[project.urls]
Repository = "https://github.com/amzoo/openpilot-nnlc-tools"

[project.scripts]
nnlc-sync = "nnlc_tools.sync_rlogs:main"
nnlc-extract = "nnlc_tools.extract_lateral_data:main"
nnlc-score = "nnlc_tools.score_routes:main"
nnlc-visualize = "nnlc_tools.visualize_coverage:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["nnlc_tools*"]

[tool.setuptools.package-data]
"nnlc_tools" = ["cereal/*.capnp", "cereal/include/*.capnp"]
